--- a/Tareas/simpy_matriz_inercia_cubo.ipynb
+++ b/Tareas/simpy_matriz_inercia_cubo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOf4FXrTYacFV+hhcWlrJyc",
+      "authorship_tag": "ABX9TyNOSmtCXX8MkecOfY+qbj/q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/SalgadoHUB/Classical_Mechanics_II/blob/main/simpy_matriz_Inercia_cubo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/SalgadoHUB/Classical_Mechanics_II/blob/main/Tareas/simpy_matriz_inercia_cubo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -89,7 +89,8 @@
       "cell_type": "markdown",
       "source": [
         "Ahora definimos los elementos de la matriz de inercia, usando integrales definidas, y tomando origen en CDM. Empezamos colocando nuestro origen en el centro del cubo, haciendo que los ejes sean paralelos a las aristas (perpendiculares a las caras por las que emergen). Los límites de integración serán (-L/2, L/2) en los  tres ejes.\n",
-        "Para hacer una integral triple simplemente hay que pasar los argumentos de las tres integrales"
+        "\n",
+        "Para hacer una integral triple simplemente hay que pasar los argumentos de las tres integrales."
       ],
       "metadata": {
         "id": "QqvV4HlWa6QZ"
