--- a/Tareas/simpy_matriz_inercia_cubo.ipynb
+++ b/Tareas/simpy_matriz_inercia_cubo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOSmtCXX8MkecOfY+qbj/q",
+      "authorship_tag": "ABX9TyOrsfyYWZXjDSxpIxOhcWhP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,10 +50,14 @@
       "source": [
         "## Uso de Integrales\n",
         "En primer lugar vamos a trabajar con integrales para calcular los momentos de inercia.\n",
-        "Queremos calcular la matriz de inercia para un cubo macizo, de densidad uniforme y lado L, para ejes que pasan por su CDM y son perpendiculares a las caras del cubo.\n",
-        "Usamos la función \"integrate\" del módulo simpy:\n",
+        "Queremos calcular la matriz de inercia para un cubo macizo, de densidad uniforme y lado *L*, para ejes que pasan por su CDM y son perpendiculares a las caras del cubo.\n",
+        "Usamos la función `integrate` de la librería `simpy`:\n",
+        "\n",
+        "```\n",
         "integrate(f, (x, a, b))\n",
-        "que devuelve la integral definida de f entre a y b."
+        "```\n",
+        "\n",
+        "que devuelve la integral definida de *f* entre *a* y *b*."
       ],
       "metadata": {
         "id": "7u7luFjwYUXI"
@@ -88,7 +92,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ahora definimos los elementos de la matriz de inercia, usando integrales definidas, y tomando origen en CDM. Empezamos colocando nuestro origen en el centro del cubo, haciendo que los ejes sean paralelos a las aristas (perpendiculares a las caras por las que emergen). Los límites de integración serán (-L/2, L/2) en los  tres ejes.\n",
+        "Ahora definimos los elementos de la matriz de inercia, usando integrales definidas, y tomando origen en CDM. Empezamos colocando nuestro origen en el centro del cubo, haciendo que los ejes sean paralelos a las aristas (perpendiculares a las caras por las que emergen). Los límites de integración serán (-*L/2*, *L/2*) en los  tres ejes.\n",
         "\n",
         "Para hacer una integral triple simplemente hay que pasar los argumentos de las tres integrales."
       ],
@@ -148,7 +152,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ahora creamos la matriz I respecto CDM"
+        "Ahora creamos la matriz *I* respecto CDM"
       ],
       "metadata": {
         "id": "ehhK9n1Lfwh5"
@@ -198,7 +202,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Cambiamos ahora de origen, y nos colocamos en un vértice. Los límites de integración serán (0,L) en los tres ejes."
+        "Cambiamos ahora de origen, y nos colocamos en un vértice. Los límites de integración serán (0,*L*) en los tres ejes."
       ],
       "metadata": {
         "id": "pvurKiXNoDcn"
@@ -392,7 +396,13 @@
       "cell_type": "markdown",
       "source": [
         "La matriz respecto del vértice no es diagonal.  Vamos a diagonalizarla para encontrar los ejes principales respecto del vértice.\n",
-        "Simplemete usamos la función \"eigenvects()\", que devuleve una lista de tuplas con la forma (eigenvalue, algebraic_multiplicity, [eigenvectors])."
+        "Simplemete usamos la función `eigenvects()`, que devuleve una lista de tuplas con la forma:\n",
+        "\n",
+        "\n",
+        "```\n",
+        "(eigenvalue, algebraic_multiplicity, [eigenvectors])\n",
+        "```\n",
+        "\n"
       ],
       "metadata": {
         "id": "ddghdjgLsdRb"
@@ -451,7 +461,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Vemos también que el momento principal en la dirección vertical es M*L²/6, el mismo que teníamos en la matriz respecto al CDM. Esto es lógico, ya que I_cdm era diagonal, y cualquier eje que pase por el CDM (como la diagonal del cubo) es también eje principal en esa base."
+        "Vemos también que el momento principal en la dirección vertical es\n",
+        "\n",
+        "\n",
+        "```\n",
+        "M*L²/6\n",
+        "```\n",
+        "el mismo que teníamos en la matriz respecto al CDM. Esto es lógico, ya que *I_cdm* era diagonal, y cualquier eje que pase por el CDM (como la diagonal del cubo) es también eje principal en esa base.\n"
       ],
       "metadata": {
         "id": "h47MMI9Mv4Cq"
@@ -460,7 +476,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Otra forma de calcularlo es la función \"diagonalize()\", que nos devuelve la matriz con los autovectores (columna) y la matriz diagonalizada"
+        "Otra forma de calcularlo es la función `diagonalize()`, que nos devuelve la matriz con los autovectores (columna) y la matriz diagonalizada"
       ],
       "metadata": {
         "id": "TvImR8lYuhy5"
