--- a/Tareas/simpy_matriz_inercia_cubo.ipynb
+++ b/Tareas/simpy_matriz_inercia_cubo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrsfyYWZXjDSxpIxOhcWhP",
+      "authorship_tag": "ABX9TyOpHHl8c1Oxy7YB3v6WeZR7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,6 +127,15 @@
           "execution_count": 63
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "De todas formas, también podemos integrar tres veces. Por claridad, lo escribimos así:"
+      ],
+      "metadata": {
+        "id": "1_GxSAGjAuuH"
+      }
     },
     {
       "cell_type": "code",
